--- a/index.html
+++ b/index.html
@@ -4,74 +4,26 @@
 <head>
   <meta charset="utf-8">
   <title>Sally's Giftastic_Homework 6</title>
-  <style type="text/css">
-    button,
-    div,
-    form,
-    input {
-      margin: 10px;
-    }
-  </style>
+  <!--<link rel= "stylesheet" type="text/css" href="style.css">-->
 </head>
 
 <body>
 
-  <div class="container">
-    <h1>Animal Search</h1>
+  <div id= "pet-button">
+    
+  </div>
 
-    <!-- Movies will get dumped here -->
-    <div id="animals-view"></div>
-
-    <form id="animals-form">
-      <label for="animal-input">Add an animal</label>
-      <input type="text" id="animal-input">
-      <br>
-
-      <!-- Button triggers new movie to be added -->
-      <input id="add-animal" type="submit" value="Add an Animal">
+    <form id="pet-form">
+      <label for="pet-input">Add a Pet</label>
+      <input type="text" id="pet-input">
+      <input id="add-pet" type="submit" value="Add a Pet">
     </form>
+    
+    <div id="pet">
+    </div>
 
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript">
-      // Initial array of movies
-      var animals = ["Dog", "Cat", "Mouse", "Squirrel"];
+    <script type=""assets\javascript\app.js""></script>
 
-      // Function for displaying movie data
-      function renderButtons() {
-
-        $("#animals-view").html("");
-        // Delete the content inside the movies-view div prior to adding new movies
-        // (this is necessary otherwise you will have repeat buttons)
-
-        // Loop through the array of movies, then generate buttons for each movie in the array
-
-        for (var i = 0; i < animals.length; i++) {
-          $("#animals-view").append("<button>" + animals[i] + "</button>"); 
-
-        };
-
-      }
-
-      // This function handles events where the add movie button is clicked
-      $("#add-animal").on("click", function(event) {
-        // event.preventDefault() prevents submit button from trying to send a form.
-        // Using a submit button instead of a regular button allows the user to hit
-        // "Enter" instead of clicking the button if desired
-        event.preventDefault();
-
-        // Write code to grab the text the user types into the input field
-        var newButtonName = $("#animal-input").val();
-        // Write code to add the new movie into the movies array
-        animals.push(newButtonName);
-
-        // The renderButtons function is called, rendering the list of movie buttons
-        renderButtons();
-      });
-
-      // Calling the renderButtons function to display the initial list of movies
-      renderButtons();
-    </script>
-  </div>
 </body>
-
 </html>
