--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <input id="add-pet" type="submit" value="Submit">
       
     </form>
-    
+    <div id="buttonContainer">
+    </div>
     <div id="pet">
     </div>
 
